--- a/cuepoints.css
+++ b/cuepoints.css
@@ -8,11 +8,12 @@ videogular vg-cuepoints {
 
 videogular vg-cuepoints vg-cuepoint {
 	position: absolute;
-	top: -9px;
+	top: -5px;
 
 	display: block;
-	width: 3px;
-	height: 20px;
+	width: 11px;
+	height: 11px;
+	border-radius: 50%;
 
-	background-color: red;
+	background-color: #999;
 }
